--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=ULL-ESIT-INF-DSI-2324_ull-esit-inf-dsi-23-24-prct09-filesystem-magic-app-GarviArveloDaniel
+sonar.projectKey=ULL-ESIT-INF-DSI-2324_ull-esit-inf-dsi-23-24-prct10-fs-proc-sockets-magic-app-GarviArveloDaniel
 sonar.organization=ull-esit-inf-dsi-2324
 
 # This is the name and version displayed in the SonarCloud UI.
@@ -7,7 +7,7 @@ sonar.organization=ull-esit-inf-dsi-2324
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./src
-sonar.exclusions=**/node_modules/**, ./src/index.ts
+sonar.exclusions=**/node_modules/**
 
 # Encoding of the source code. Default is default system encoding
 # sonar.sourceEncoding=UTF-8
